<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CafeDetail"
    android:background="@color/beige"
    >

    <ImageView
        android:id="@+id/cafe_image"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/cafe_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cafe_image"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/wheeler_s"
        android:textSize="30sp"
        android:textColor="@color/black"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/cafe_name"
        app:layout_constraintStart_toStartOf="@id/cafe_name"
        app:layout_constraintEnd_toEndOf="@id/cafe_name"
        android:layout_marginTop="5dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categories_recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categories_recycle"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/rating_4_2_5_0"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/operating_hour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/operating_hours"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operating_hour"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/location"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/view_on_map_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/view_on_map"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        />

    <TextView
        android:id="@+id/phone_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_on_map_txt"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/phone_no"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/add_to_wishlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_on_map_txt"
        android:layout_marginTop="5dp"
        android:text="@string/begin_brewing"
        android:fontFamily="@font/nunito_bold"
        android:backgroundTint="@color/coffee_brown"
        />

</androidx.constraintlayout.widget.ConstraintLayout>