<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardElevation="6dp"

    >
    <LinearLayout
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:background="@color/matcha"
        android:padding="5dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/voucher_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/voucher_desc"
            android:textColor="@color/coffee_brown"
            android:fontFamily="@font/nunito_bold"
            android:textSize="17sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:text="@string/on_selected_cafes_only"
            android:textColor="@color/coffee_brown"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/coffee_points"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/points_exc"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/redeem_with_1000_points"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/nunito"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>